Fixed overflow bug on hidden info card

--- a/src/components/InfoCard.css
+++ b/src/components/InfoCard.css
@@ -25,6 +25,10 @@
     margin-bottom: 16px;
 }
 
+.infocard-content-wrapper {
+    overflow: hidden;
+}
+
 .infocard-content-wrapper.closed {
     height: 0px;
 }
